# helpv

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: load_time.rs
openspec/changes/archive/2026-02-28-add-man-page-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-28-add-man-page-support/specs/man-page-upgrade/: spec.md
openspec/changes/benchmark-load-time/: design.md  proposal.md  tasks.md
openspec/changes/benchmark-load-time/specs/load-time-benchmark/: spec.md
openspec/specs/man-page-upgrade/: spec.md
src/: app.rs  config.rs  fetcher.rs  finder.rs  history.rs  keys.rs  lib.rs  main.rs  pager.rs  parser.rs  switcher.rs  toolpacks.rs  toolpacks.toml
tests/fixtures/: cargo_help.txt  gh_help.txt  man_formatted.txt
