[package]
name = "helpv"
version = "0.1.4"
edition = "2024"
description = "A terminal-based help documentation viewer with subcommand navigation"
license = "MIT"
repository = "https://github.com/trentdavies/helpv"
readme = "README.md"
keywords = ["cli", "help", "terminal", "tui", "documentation"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Trent Davies"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
nucleo = "0.5"
dirs = "6"
regex = "1"
anyhow = "1"

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"] }
serde_json = "1"

[[bench]]
name = "load_time"
harness = false
